# project-iot-gateway

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  IoTGateway  LICENSE  README.md  get.txt
ConfigTest/: ConfigTest1  ConfigTestVerarbeiter1  MQTTConfigTest1  MQTTConfigTest2  OPCConfigTest1
Documentation/: .~lock.OPC_Documentation.odt#  OPC_Documentation.odt
OPCTest/: OPC_Test  Server_v2
QueueTest/: QueueTest1  QueueTest2
TimeTest/: TimeTest1
VerarbeiterTest/: VerarbeiterTest1
project_visual/: index.html  script.js  style.css
src/: CMakeLists.txt  CTestTestfile.cmake  config_main.c  config_main.h  config_mqtt.c  config_mqtt.h  config_opc.c  config_opc.h  config_verarbeiter.c  config_verarbeiter.h  configuration.c  configuration.h  datenerfasser.c  datenerfasser.h  datenversender.c  datenversender.h  dimiMqttTest.c  internals.c  internals.h  main.c  mqtt.c  mqtt.h  opc.c  opc.h  queue.c  queue.h  starter.c  starter.h  verarbeiter.c  verarbeiter.h
test/: CMakeLists.txt  CTestTestfile.cmake  QueueTest  queue.c  queue.h  queueTest.c
test/Client_v2/: CMakeLists.txt  CTestTestfile.cmake  Client_v2  Client_v2.c  Client_v2.h  Internals.h  OPCTestmain.c  OPC_Queuetest.c  OPC_Queuetest.h  OPC_Test_Main.c  OPC_init.xml  init_xml.c  init_xml.h  main.c  make.sh  open62541.h  response_handler.c  response_handler.h
test/CloudSideMQTT/: MQTT_TestSubscriber.c
test/ConfigTest/: CMakeLists.txt  CTestTestfile.cmake  ConfigTest1.c  ConfigTestMQTT.c  ConfigTestMQTT1.c  ConfigTestMQTT2.c  ConfigTestOPC.c  ConfigTestVerarbeiter1.c
test/InternalsTest/: CMakeLists.txt  CTestTestfile.cmake  TimeTest1.c
test/MQTT_Cloud_Client/: CMakeLists.txt  CMmakeList.txt  mqtt_CC_test.sh  mqtt_cloud_client.c
test/QueueTest/: CMakeLists.txt  CTestTestfile.cmake  queueTest.c  queueTest2.c
test/Server_v2/: CMakeLists.txt  CTestTestfile.cmake  RoboterarmObjekt.h  RoboterarmObjekt_v2.c  Server_v2  Server_v2.c  make.sh  state.c  state.h
test/VerarbeiterTest/: CMakeLists.txt  CTestTestfile.cmake  verarbeiterTest1.c
test/opc-server/: CMakeLists.txt  coordinates.c  coordinates.h  open62541.c  server.c  state.c  state.h
test_config_files/: main_config.xml  mqtt_config.xml  opc_config.xml  verarbeiter_config.xml
