set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/ConfigTest)

ADD_EXECUTABLE(ConfigTest1 ConfigTest1.c ${PROJECT_SOURCE_DIR}/src/configuration.c)
TARGET_LINK_LIBRARIES(ConfigTest1 xml2)
ADD_TEST(ConfigTest1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ConfigTest1)

ADD_EXECUTABLE(OPCConfigTest1 ConfigTestOPC.c ${PROJECT_SOURCE_DIR}/src/configuration.c ${PROJECT_SOURCE_DIR}/src/config_opc.c)
TARGET_LINK_LIBRARIES(OPCConfigTest1 xml2)
ADD_TEST(OPCConfigTest1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/OPCConfigTest1)

ADD_EXECUTABLE(MQTTConfigTest1 ConfigTestMQTT1.c ${PROJECT_SOURCE_DIR}/src/configuration.c ${PROJECT_SOURCE_DIR}/src/config_mqtt.c)
TARGET_LINK_LIBRARIES(MQTTConfigTest1 xml2)
ADD_TEST(MQTTConfigTest1 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/MQTTConfigTest1)

ADD_EXECUTABLE(MQTTConfigTest2 ConfigTestMQTT2.c ${PROJECT_SOURCE_DIR}/src/configuration.c ${PROJECT_SOURCE_DIR}/src/config_mqtt.c)
TARGET_LINK_LIBRARIES(MQTTConfigTest2 xml2)
ADD_TEST(MQTTConfigTest2 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/MQTTConfigTest2)
